devops/kubernetes/network-policy/backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-network-policy
  namespace: todo-app

spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - backend

  policyTypes:
    - Ingress
    - Egress

  ingress:

    # Gateway → backend services
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: gateway

      ports:
        - protocol: TCP
          port: 5000

        - protocol: TCP
          port: 5001

        - protocol: TCP
          port: 5002

  egress:

    # DNS
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53

    # PostgreSQL
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres

      ports:
        - protocol: TCP
          port: 5432

    # Redis
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: redis

      ports:
        - protocol: TCP
          port: 6379

    # RabbitMQ
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq

      ports:
        - protocol: TCP
          port: 5672
