devops/kubernetes/network-policy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny-ingress
  namespace: todo-app

  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/part-of: todo-microservices

spec:
  podSelector: {}

  policyTypes:
    - Ingress
