devops/kubernetes/network-policy/frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: frontend-network-policy
  namespace: todo-app

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: frontend

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

      ports:
        - protocol: TCP
          port: 3000
