devops/kubernetes/network-policy/postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres-network-policy
  namespace: todo-app

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backend

        - podSelector:
            matchLabels:
              app.kubernetes.io/component: migration

      ports:
        - protocol: TCP
          port: 5432
