devops/kubernetes/network-policy/rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: rabbitmq-network-policy
  namespace: todo-app

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backend

      ports:
        - protocol: TCP
          port: 5672
