devops/kubernetes/network-policy/redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: redis-network-policy
  namespace: todo-app

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: auth-service

      ports:
        - protocol: TCP
          port: 6379
